force-app/main/default/objects/EdPlusContact__x/EdPlusContact__x.object-meta.xml
<CustomObject>
    <description>EdPlus Contacts (Cross Org Initiative)</description>
    <externalDataSource>EdPlusCrossOrg</externalDataSource>
    <externalName>Contact</externalName>
    <label>Contact (EdPlus)</label>
    <pluralLabel>Contacts (EdPlus)</pluralLabel>
</CustomObject>