force-app/main/default/objects/EdPlusContact__x/fields/Account_ID_edpl__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_edpl__c</fullName>
    <externalDeveloperName>AccountId</externalDeveloperName>
    <label>Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>