force-app/main/default/objects/EdPlusContact__x/fields/ASUO_SBUX_Partner_ID_edpl__c.field-meta.xml
<CustomField>
    <fullName>ASUO_SBUX_Partner_ID_edpl__c</fullName>
    <externalDeveloperName>ASUO_SBUX_Partner_ID__c</externalDeveloperName>
    <label>ASUO SBUX Partner ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>