force-app/main/default/objects/EdPlusContact__x/fields/ASURITE_ID_edpl__c.field-meta.xml
<CustomField>
    <fullName>ASURITE_ID_edpl__c</fullName>
    <externalDeveloperName>ASURITE_ID__c</externalDeveloperName>
    <label>ASURITE ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>