force-app/main/default/objects/EdPlusContact__x/fields/Email_edpl__c.field-meta.xml
<CustomField>
    <fullName>Email_edpl__c</fullName>
    <externalDeveloperName>Email</externalDeveloperName>
    <label>Email</label>
    <type>Email</type>
</CustomField>