force-app/main/default/objects/EdPlusContact__x/fields/EMPLID_edpl__c.field-meta.xml
<CustomField>
    <fullName>EMPLID_edpl__c</fullName>
    <externalDeveloperName>EMPLID__c</externalDeveloperName>
    <label>EMPLID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>