force-app/main/default/objects/EdPlusContact__x/fields/First_Name_edpl__c.field-meta.xml
<CustomField>
    <fullName>First_Name_edpl__c</fullName>
    <externalDeveloperName>FirstName</externalDeveloperName>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>