force-app/main/default/objects/EdPlusContact__x/fields/Last_Name_edpl__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_edpl__c</fullName>
    <externalDeveloperName>LastName</externalDeveloperName>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>