force-app/main/default/objects/EdPlusContact__x/fields/Middle_Name_edpl__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name_edpl__c</fullName>
    <externalDeveloperName>MiddleName</externalDeveloperName>
    <label>Middle Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>