force-app/main/default/objects/EdPlusContact__x/fields/Name_edpl__c.field-meta.xml
<CustomField>
    <fullName>Name_edpl__c</fullName>
    <externalDeveloperName>Name</externalDeveloperName>
    <label>Full Name</label>
    <length>121</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>