force-app/main/default/objects/EdPlusContact__x/fields/Preferred_Name_edpl__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name_edpl__c</fullName>
    <externalDeveloperName>Preferred_name__c</externalDeveloperName>
    <label>Preferred name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>