force-app/main/default/objects/EdPlusContact__x/fields/SFDC_Enterprise_Contact_Id_edpl__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Enterprise_Contact_Id_edpl__c</fullName>
    <externalDeveloperName>SFDC_Enterprise_Contact_Id__c</externalDeveloperName>
    <label>SFDC Enterprise Contact Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>