force-app/main/default/objects/EdPlusContact__x/fields/SSB_CRMSYSTEM_SSID_Winner_SourceSys_edpl__c.field-meta.xml
<CustomField>
    <fullName>SSB_CRMSYSTEM_SSID_Winner_SourceSys_edpl__c</fullName>
    <externalDeveloperName>SSB_CRMSYSTEM_SSID_Winner_SourceSystem__c</externalDeveloperName>
    <label>SSB_CRMSYSTEM_SSID_Winner_SourceSystem</label>
    <length>100</length>
    <type>Text</type>
</CustomField>