force-app/main/default/objects/EdPlusContact__x/fields/Starbucks_ID_edpl__c.field-meta.xml
<CustomField>
    <fullName>Starbucks_ID_edpl__c</fullName>
    <externalDeveloperName>Starbucks_ID__c</externalDeveloperName>
    <label>Starbucks ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>