force-app/main/default/objects/EdPlusContact__x/fields/Title_edpl__c.field-meta.xml
<CustomField>
    <fullName>Title_edpl__c</fullName>
    <externalDeveloperName>Title</externalDeveloperName>
    <label>Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>