force-app/main/default/objects/EdPlusContact__x/fields/Type_edpl__c.field-meta.xml
<CustomField>
    <fullName>Type_edpl__c</fullName>
    <externalDeveloperName>Type__c</externalDeveloperName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>